--- a/index.html
+++ b/index.html
@@ -267,7 +267,9 @@
 			</br>
 				Technology has contributed a lot in the progress of human being, for instance, the material of swimming suit is essential to the record-breaking.
 			</br>
-				While technology couldn’t help, one can only make progress by training themselves. Being different from some specific sports, track and field event is the most common sport that people from all over the world and all different background can easily get access to. The more people exercising at the same time, the faster we go, and it is possible that in some certain sports, we’ve already, or say, we’re very close to the so-called human being’s limit-wall.
+				While technology couldn’t help, one can only make progress by training themselves. As for the high jump, the improvement in technique itself can also be a great enhancement in scores.
+			</br>
+				Being different from some specific sports, track and field event is the most common sport that people from all over the world and all different background can easily get access to. The more people exercising at the same time, the faster we go, and it is possible that in some certain sports, we’ve already, or say, we’re very close to the so-called human being’s limit-wall.
 			</p>
 		</div>
 	</div>
