--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 			<h2 class='subhead'>
 				 —— A study of jumping related competitions in Olympics
 			</h2>
-			<p class='credits'>Graphic by <a href='http://www.zhizhouwang.me'>Zhizhou Wang</a> | Source by <a href='http://www.theolympicdatabase.nl/home'>Olympics database</a></p>
+			<p class='credits'>Graphic by <a href='http://zhizhouwang.me/'>Zhizhou Wang</a> | Source by <a href='http://www.theolympicdatabase.nl/home'>Olympics database</a></p>
 			<p class='intro'>
 				The Olympics is one of the hottest topic people would talk about every four years, the performance of athletes represents not only the honor of their own, their country, but even the advancement of all mankind. However, while the swimming records are broken almost every 4 years, the broken speed of Olympic record of track and field events is relatively slow.
 			</br>
